// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/list-view/demo/basic.native.tsx correctly 1`] = `
<RCTScrollView
  dataSource={
    ListViewDataSource {
      "items": "unknown",
    }
  }
  onEndReached={[Function]}
  onEndReachedThreshold={10}
  pageSize={4}
  renderFooter={[Function]}
  renderHeader={[Function]}
  renderRow={[Function]}
  renderScrollComponent={[Function]}
  renderSectionHeader={[Function]}
  renderSeparator={[Function]}
>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "padding": 8,
          },
        ]
      }
    >
      header
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "padding": 30,
            "textAlign": "center",
          },
        ]
      }
    >
       
      Loading...
       
    </Text>
  </View>
</RCTScrollView>
`;

exports[`renders ./components/list-view/demo/basic-row.native.tsx correctly 1`] = `
<RCTScrollView
  dataSource={
    ListViewDataSource {
      "items": "unknown",
    }
  }
  onEndReached={[Function]}
  onEndReachedThreshold={10}
  pageSize={4}
  renderFooter={[Function]}
  renderHeader={[Function]}
  renderRow={[Function]}
  renderScrollComponent={[Function]}
  renderSeparator={[Function]}
  scrollEventThrottle={200}
  scrollRenderAheadDistance={500}
>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "padding": 8,
          },
        ]
      }
    >
      header
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "padding": 30,
          "textAlign": "center",
        }
      }
    >
       
      Loading...
       
    </Text>
  </View>
</RCTScrollView>
`;
